Navigation: fix overlapping stickies

--- a/htdocs/css/browser.css
+++ b/htdocs/css/browser.css
@@ -808,6 +808,7 @@ aes70-block-children {
   padding-left: 16px;
   display: flex;
   flex-direction: column;
+  z-index: 1;
 }
 aes70-block-children > .loading {
   height: 36px;
